Setup and Ngrx code

--- a/src/app/core/layout/shell/shell.component.html
+++ b/src/app/core/layout/shell/shell.component.html
@@ -47,6 +47,15 @@
         <mat-icon class="nav-ic">campaign</mat-icon>
         <span class="nav-txt">Announcements</span>
       </a>
+      <a
+        mat-button
+        class="nav-link"
+        routerLink="/self-service"
+        routerLinkActive="active-link"
+      >
+        <mat-icon class="nav-ic">event_available</mat-icon>
+        <span class="nav-txt">Self Service</span>
+      </a>
 
     </nav>
   </div>
