--- a/src/app/features/announcements/announcements-toolbar/announcements-toolbar.component.html
+++ b/src/app/features/announcements/announcements-toolbar/announcements-toolbar.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="searchWrap">
-    <mat-form-field appearance="outline" class="search" subscriptSizing="fixed">
+    <mat-form-field appearance="fill" class="search" subscriptSizing="fixed">
       <mat-icon matPrefix class="searchIcon">search</mat-icon>
 
       <input
@@ -25,5 +25,6 @@
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
+
   </div>
 </div>
