Setup and Ngrx code

--- a/src/app/features/home/home/home.component.html
+++ b/src/app/features/home/home/home.component.html
@@ -8,7 +8,7 @@
     <h1>State Management for High-Performance UI</h1>
 
     <p class="subtitle">
-      Build faster, smoother Angular apps with a predictable global store, request dedupe, instant UI updates,
+      Build faster, smoother Angular apps with a predictable global store, instant UI updates,
       and scalable pagination strategies.
     </p>
 
