Setup and Ngrx code

--- a/src/app/features/employees/employees-page/employees-page.component.html
+++ b/src/app/features/employees/employees-page/employees-page.component.html
@@ -4,7 +4,7 @@
   (refresh)="load()"
 />
 
-<!-- ✅ Collapsible Create Employee (Apple-like) -->
+<!--  Collapsible Create Employee (Apple-like) -->
 <mat-accordion class="createAcc" multi="false">
   <mat-expansion-panel
     class="createPanel"
@@ -97,7 +97,7 @@
   </mat-expansion-panel>
 </mat-accordion>
 
-<!-- ✅ Employees -->
+<!-- Employees -->
 <mat-card class="panel">
   <div class="panelHead">
     <div class="panelTitle">
